--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background: #f5f5f5;
+            background: #fff;
             height: 100vh;
             overflow: hidden;
         }
